--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="range" />
+    <ul class="navList"></ul>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
